<resources>
    <string name="app_name">Shell Authorization</string>
    <string name="title_activity_license">License</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="app_prefs_name">AppPrefs</string>
    <string name="main_page_bottom_nav_homepage">Home</string>
    <string name="main_page_bottom_nav_apps">Apps</string>
    <string name="main_page_bottom_nav_templates">Templates</string>
    <string name="main_page_bottom_nav_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_apps_list_title">Apps</string>
    <string name="add">Add</string>
    <string name="fragment_templates_title">Templates</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="about">About</string>
    <string name="about_this_app_open_activity">Open about page</string>
    <string name="about_this_app">About this application</string>
    <string name="settings_privacy_and_security">Privacy and Security</string>
    <string name="about_this_app_license">User Agreement</string>
    <string name="accept_license_settings">Accept user agreement</string>
    <string name="about_this_app_privacy">Privacy policy</string>
    <string name="about_this_app_open_privacy">View Privacy Policy</string>
    <string name="settings_open_source_license">Open Source Licenses</string>
    <string name="settings_open_source_license_open_activity">View Open Source Licenses</string>
    <string name="settings_permission_explain">Permission Explanation</string>
    <string name="settings_permission_explain_open_activity">Explain how and why the application uses permissions</string>
    <string name="about_this_app_product_main_page">Product Homepage</string>
    <string name="about_this_app_open_main_page">Open Product Homepage</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_app_problems">Feedback problems of the application</string>
    <string name="learn_more_button">Learn More</string>
    <string name="a11y_app_icon">The icon of the application.</string>
    <string name="activity_name_launcher">Launcher</string>
    <string name="how_did_u_get_here_lol">How did you get here? \nlol :D</string>
    <string name="title_product_homepage">Product Homepage</string>
    <string name="click_to_close_the_page">close the page</string>
    <string name="click_to_open_product_homepage">Click to open product homepage</string>
    <string name="cannot_open_page">Cannot open page</string>
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>
    <string name="loading_text">Loading…</string>
    <string name="license_dialog_title">License</string>
    <string name="license_dialog_content">You need to accept the user agreement and privacy policy to use the application.</string>
    <string name="license_dialog_user_license">User agreement</string>
    <string name="license_dialog_privacy_policy">Privacy policy</string>
    <string name="license_dialog_accept_all">Accept all</string>
    <string name="license_dialog_decline">Decline</string>
    <string name="main_page_bottom_nav_shells">Shells</string>
    <string name="fragment_shells_title">Shells</string>
    <string name="app_prefs_others">Others</string>
    <string name="close_the_app_now">Close the application now</string>
    <string name="close_the_app">Close the application</string>
    <string name="uninstall_the_app_now">Uninstall the application now</string>
    <string name="uninstall_the_app">Uninstall the application</string>
    <string name="are_you_sure_ask">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Cancel">Cancel</string>
    <string name="uninstall_the_app_confirm">Are you sure you want to uninstall this application?\nThis is unrevertable and all of your configurations will be lost.</string>
    <string name="i_see">I see</string>
    <string name="fragment_container_label">Fragment Container Page</string>
    <string name="fragment_container2_label">Fragment Dialog Container Page</string>
    <string name="Close">Close</string>
    <string name="Content">Content</string>
    <string name="fragment_add_shell_provider_title">Add shell provider</string>
    <string name="shell_shizuku_fail_auth_noinstall_title">Cannot use Shizuku</string>
    <string name="shell_shizuku_fail_auth_noinstall_content">Either you did not install Shizuku application or you refused me to query all packages, so I cannot continue.\nDo you want to download Shizuku now?</string>
    <string name="shell_shizuku_fail_auth_noinstall_install">Download</string>
    <string name="shell_shizuku_fail_auth_noinstall_giveup">Abandon</string>
    <string name="shell_shizuku_fail_auth_noauth_title">Cannot use Shizuku</string>
    <string name="shell_shizuku_fail_auth_noauth_content">Cannot use Shizuku because of either your decline or an internal problem. If you are sure you configured well, please try to ignore all battery optimization related settings for both me and Shizuku application.</string>
    <string name="shell_shizuku_fail_auth_noauth_giveup">Abandon</string>
    <string name="settings_general">General</string>
    <string name="ignore_battery_optimization_title">Ignore battery optimization</string>
    <string name="ignore_battery_optimization_summary">If your commands are always killed in background, you can try to ignore battery optimization.</string>
    <string name="ignore_battery_optimization_already">Good news: Battery optimization has been ignored.</string>
    <string name="shell_shizuku_success_auth_toast">Congratulations! You have successfully set up Shizuku.</string>
    <string name="invalid_parameter_error">Invalid parameter.</string>
    <string name="shell_root_fail_auth_notfound_title">Cannot Continue</string>
    <string name="shell_root_fail_auth_notfound_content">Cannot continue because the su specified cannot be found.\nPlease check the su path, or change to another shell provider.</string>
    <string name="shell_root_fail_auth_notfound_giveup">Abandon</string>
    <string name="shell_root_fail_auth_noroot_title">Cannot Get Root</string>
    <string name="shell_root_fail_auth_noroot_content">The su specified was found, but it did not give us root privileges.\nThis will happen when you have no root, or you declined me to use root.\nPlease check your device or change to another shell provider.</string>
    <string name="shell_root_fail_auth_noroot_giveup">Abandon</string>
    <string name="shell_provider_type_root">Root</string>
    <string name="shell_provider_type_shizuku">Shizuku</string>
    <string name="fragment_shell_provider_details_title">Shell provider details</string>
    <string name="shell_provider_delete">Delete provider</string>
    <string name="shell_provider_delete_confirm">Are you sure you want to delete this shell provider?</string>
    <string name="app_allow">Allow</string>
    <string name="fragment_application_detail_title">Application details</string>
    <string name="apps_options">Options</string>
    <string name="apps_filter_hint">Filter by name or package</string>
    <string name="apps_sort_by">Sort by</string>
    <string name="apps_sort_by_name">Application name</string>
    <string name="apps_sort_by_package">Package name</string>
    <string name="apps_sort_by_install_time">Install time</string>
    <string name="apps_sort_by_update_time">Update time</string>
    <string name="apps_reverse_order">Reverse order</string>
    <string name="apps_exclude_system">Exclude system apps</string>
    <string name="apps_exclude_non_launchable">Exclude non-launchable apps</string>
    <string name="edit_template_template_name">Template name:</string>
    <string name="fragment_edit_template_title">Edit Template</string>
    <string name="edit_template_shell_provider">Shell Provider:</string>
    <string name="edit_template_user_profile">User profile:</string>
    <string name="edit_template_user_profile_default">Default</string>
    <string name="edit_template_user_profile_use_template">Template: %1$s</string>
    <string name="edit_template_user_profile_custom">Custom</string>
    <string name="edit_template_user_profile_edit">Edit</string>
    <string name="edit_template_shell_command_prompt">Shell Command</string>
    <string name="edit_template_shell_command_placeholder">Input shell command template here</string>
    <string name="edit_template_shell_command_hint">Hint:\nUse \"$@\" to forward arguments (currently there is no POSIX parser, only the \"$@\" itself can be processed)\nUse \\$ to write $</string>
    <string name="edit_template_delete_template">Delete</string>
    <string name="edit_template_save">Save</string>
    <string name="edit_template_no_shell_provider_title">No shell provider</string>
    <string name="edit_template_no_shell_provider_content">You need to set up a shell provider before you can edit a template.</string>
    <string name="add_shell_provider_subtitle">Please choose one of the following shell providers to continue.</string>
    <string name="add_shell_provider_use_this">Use this provider</string>
    <string name="shell_provider_param_su">su Location</string>
    <string name="shell_provider_action_authorize">Authorize</string>
    <string name="shell_provider_action_root_check_desc">This will check whether root access is available.</string>
    <string name="shell_provider_friendly_name">Name</string>
    <string name="shell_provider_save">Save</string>
    <string name="shell_provider_type_shell">Shell</string>
    <string name="shell_provider_root_description">Root provider allows commands to run under root privileges.</string>
    <string name="shell_provider_root_detailed_description">Commands will run with root privileges via the su binary you specify.</string>
    <string name="shell_provider_shizuku_description">Shizuku provider allows commands to run under Android Shell (2000) privileges, providing more privileges to execute privileged commands compared to normal applications.</string>
    <string name="shell_provider_shizuku_detailed_description">You need to install the Shizuku application and grant the Shizuku permission to this application, so that you can use the Shizuku provider.</string>
    <string name="shell_shizuku_fail_illegal_shizuku_content">Cannot use Shizuku because the Shizuku installed on your device seems to be illegal. If you installed non-official Shizuku, your data and your runtime might be no longer safe.\nPlease install Shizuku from legal sources and try again.</string>
    <string name="fragment_edit_user_profile_title">Edit User Profile</string>
    <string name="edit_user_profile_top_hint">Tip: Most features here require root access.</string>
</resources>