<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/apps_sort_by">
        <menu>
            <group
                android:id="@+id/apps_options_group_sort"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/apps_options_sort_name"
                    android:title="@string/apps_sort_by_name" />
                <item
                    android:id="@+id/apps_options_sort_package"
                    android:title="@string/apps_sort_by_package" />
                <item
                    android:id="@+id/apps_options_sort_install_time"
                    android:title="@string/apps_sort_by_install_time" />
                <item
                    android:id="@+id/apps_options_sort_update_time"
                    android:title="@string/apps_sort_by_update_time" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/apps_options_reverse_order"
        android:checkable="true"
        android:title="@string/apps_reverse_order" />
    <item
        android:id="@+id/apps_options_exclude_system"
        android:checkable="true"
        android:title="@string/apps_exclude_system" />
    <item
        android:id="@+id/apps_options_exclude_non_launchable"
        android:checkable="true"
        android:title="@string/apps_exclude_non_launchable" />

</menu>
