<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_page_bottom_nav_homepage"
        android:icon="@drawable/ic_action_home"
        android:title="@string/main_page_bottom_nav_homepage" />
    <item
        android:id="@+id/main_page_bottom_nav_shells"
        android:icon="@drawable/ic_action_computer"
        android:title="@string/main_page_bottom_nav_shells" />
    <item
        android:id="@+id/main_page_bottom_nav_apps"
        android:icon="@drawable/ic_action_apps"
        android:title="@string/main_page_bottom_nav_apps" />
    <item
        android:id="@+id/main_page_bottom_nav_templates"
        android:icon="@drawable/ic_action_insert_drive_file"
        android:title="@string/main_page_bottom_nav_templates" />
    <item
        android:id="@+id/main_page_bottom_nav_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/main_page_bottom_nav_settings" />
</menu>